--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 # /canbridge/library/libCanBridge/
 /canbridge/library/libCanBridge/*.user
 /canbridge/library/libCanBridge/*.bak
+Release
+build-CanBridgeTester-Desktop_Qt_5_8_0_MinGW_32bit-Debug
+build-libCanBridge-Desktop_Qt_5_8_0_MinGW_32bit-Debug
